GitHub Actions 디버깅 정보 추가

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,7 +27,11 @@ jobs:
           npm install markdown-it gray-matter
       
       - name: Build Blog
-        run: node build/generator.js
+        run: |
+          pwd
+          ls
+          node build/generator.js || echo "Build script failed"
+        continue-on-error: true
       
       - name: Deploy to GitHub Pages
         uses: actions/upload-pages-artifact@v2
